<resources>
    <string name="app_name">Swear</string>

    <!-- common -->
    <string name="ok">OK</string>
    <string name="accept">接受</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="clear">清除</string>
    <string name="ignore">忽略</string>
    <string name="unknown">未知</string>
    <string name="empty">无</string>
    <string name="prompt">提示</string>
    <string name="coming_soon">即将为您带来&#8230;</string>
    <string name="no_more">没有更多数据&#8230;</string>
    <string name="loading">加载&#8230;</string>

    <string name="permission_deny">权限请求失败, 操作中止</string>
    <string name="log_out">请先登录</string>

    <string name="service_phone">400&#8211;601&#8211;7717</string>
    <string name="real_phone">4006017717</string>

    <string name="today">今天</string>
    <string name="yesterday">昨天</string>

    <!-- net -->
    <string name="net_exception_unknown">未知异常</string>

    <string name="net_exception">网络异常</string>

    <string name="net_io_exception">网络异常: IO异常</string>

    <string name="net_interrupt_io">网络异常: IO中断</string>
    <string name="net_ssl_exception">网络异常: SSL异常</string>
    <string name="net_unknown_host">网络异常: 未知主机</string>

    <string name="net_ssl_handshake">网络异常: SSL验证失败</string>
    <string name="net_socket_timeout">网络异常: 连接超时</string>

    <!--menu-->
    <string name="action_settings">设置</string>
    <string name="action_share">分享</string>
    <string name="action_open_outside">在浏览器中打开</string>

    <!--share-->
    <string name="share_share_to">分享到</string>

    <!-- web link -->
    <string name="web_help_center">帮助中心</string>
    <string name="web_agreement">问学协议</string>
    <string name="web_open_deny">当前页面不可在浏览器中打开.</string>
    <string name="web_share_deny">当前页面不可分享.</string>

    <!-- load -->
    <string name="load_company">南京学问道信息科技有限公司</string>
    <string name="load_permission">正在请求权限&#8230;</string>
    <string name="load_permission_failed">权限请求失败, 终止&#8230;</string>
    <string name="load_attempt">正在尝试登录&#8230;</string>
    <string name="load_attempt_failed">登录失败, 前往登录&#8230;</string>
    <string name="load_attempt_success">前往主页&#8230;</string>

    <!--login-->
    <string name="login_title">登录</string>
    <string name="login_phone_hint">电话号码</string>
    <string name="login_password_hint">密码</string>
    <string name="login_login">登录</string>
    <string name="login_register">注册</string>
    <string name="login_skip">跳过</string>
    <string name="login_service">联系客服</string>
    <string name="login_help">帮助中心</string>
    <string name="login_signing">登录&#8230;</string>
    <string name="login_error_phone">电话号码不合法.</string>
    <string name="login_error_password">密码过短.</string>
    <string name="login_call_for_service">联系客服:</string>

    <!--register-->
    <string name="register_title">注册</string>

    <!--about-->
    <string name="about_title">关于我们</string>
    <string name="about_app">\t\t\t\t问学是一款免费的家校互动平台，为家长与老师构建便捷沟通。您可以查看孩子的班级通讯录、作业、通知以及成绩等，对孩子成长学习情况便捷获取，并且及时方便与学校老师沟通。</string>
    <string name="about_service">客服电话</string>
    <string name="about_strategy">使用条款、隐私政策和免责申明</string>
    <string name="about_company">©2015&#8211;2016 南京学问道信息科技有限公司</string>

    <!--main-->
    <string name="nav_attention">关注年级</string>
    <string name="nav_collection">我的收藏</string>
    <string name="nav_history">浏览历史</string>
    <string name="nav_download">本地下载</string>
    <string name="nav_account">账号管理</string>
    <string name="nav_member">我的会员</string>
    <string name="nav_bonus_point">我的积分</string>
    <string name="nav_order">我的订单</string>
    <string name="nav_action">操作</string>
    <string name="nav_action_about_us">关于我们</string>
    <string name="nav_action_setting">系统设置</string>
    <string name="nav_action_logout">退出登陆</string>

    <string name="action_refresh">刷新</string>
    <string name="action_feedback">发送反馈</string>
    <string name="action_help">帮助中心</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="double_click_exit">再次点击返回退出.</string>

    <!--settings-->
    <string name="settings_title">设置</string>
    <string name="pref_header_notifications">通知设置</string>
    <string name="pref_header_data_sync">数据与同步</string>

    <string name="pref_title_new_message_notifications">接受新消息通知</string>
    <string name="pref_title_new_message_detail">通知显示消息详情</string>
    <string name="pref_title_ringtone">铃声</string>
    <string name="pref_ringtone_silent">静音</string>
    <string name="pref_title_vibrate">振动</string>

    <string name="pref_ad_frequency_title">广告更新频率</string>
    <string name="pref_title_enable_jump">允许广告跳转</string>
    <string name="pref_title_enable_hw">开启硬件加速</string>
    <string-array name="pref_ad_frequency_titles">
        <item>每天</item>
        <item>每两天</item>
        <item>每周</item>
        <item>从不</item>
    </string-array>
    <string-array name="pref_ad_frequency_values">
        <item>1</item>
        <item>2</item>
        <item>7</item>
        <item>-1</item>
    </string-array>
    <string name="pref_title_data_clear_cache">清除缓存</string>
    <string name="pref_title_data_upgrade">检查更新</string>

    <!--index-->
    <string name="index_nav">首页</string>
    <string-array name="index_indicators">
        <item>学校</item>
        <item>消息</item>
        <item>好友</item>
        <item>班级</item>
    </string-array>

    <!--school-->
    <string name="school_helper">问学助手</string>
    <string name="school_notice">通知中心</string>
    <string name="school_work">作业</string>
    <string name="school_follow">英语跟读</string>
    <string name="school_schedule">课程表</string>
    <string name="school_score">成绩查看</string>
    <string name="school_register">报名登记</string>
    <string name="school_rec">特别推荐</string>

    <string name="school_schedule_without_school">所在学校尚未加入问学</string>
    <string name="school_schedule_without_child">孩子信息缺失，请联系客服400&#8211;601&#8211;7717</string>

    <string name="school_follow_title">选择教材</string>
    <string name="school_follow_empty">比钱包还干净呢~</string>
    <string name="school_follow_remember">宝宝到此一游，下次还来~</string>
    <string name="school_follow_remember_action">订阅</string>

    <!--training-->
    <string name="training_nav">培训</string>
    <string name="training_rec">推荐</string>

    <!--news-->
    <string name="news_nav">资讯</string>
    <string name="news_empty">不毛之地~</string>
    <string name="news_author">作者: %1$s</string>

    <string name="news_detail_title">详情</string>
    <string name="news_detail_reply">热门评论</string>
    <string name="news_detail_comment">说点啥吧~</string>

    <string name="news_comments_title">评论</string>
    <string name="news_comments_count">共%1$s条</string>
    <string name="news_comments_length">%1$d/%2$d</string>
    <string name="news_comments_hint">评论不能为空</string>

    <!--knowledge-->
    <string name="nlg_nav">学堂</string>
    <string name="nlg_ability">学习力</string>
    <string name="nlg_mental">心理成长</string>
    <string name="nlg_lesson">课业</string>
    <string name="nlg_courseware">学习资料</string>
    <string name="nlg_video">视频教学</string>
    <string name="nlg_classify">筛选</string>

    <string name="nlg_agency_title">学校详情</string>
    <string name="nlg_agency_verify">认证</string>
    <string name="nlg_agency_telephone">联系电话</string>
    <string name="nlg_agency_address">学校地址</string>
    <string name="nlg_agency_lesson">学校课程</string>
    <string name="nlg_agency_intro">学校介绍</string>
    <string name="nlg_agency_environment">学校环境</string>
    <string name="nlg_agency_comment">学校点评</string>
    <string name="nlg_agency_rating_teacher">教师水平: %1$s</string>
    <string name="nlg_agency_rating_quality">教学质量: %1$s</string>
    <string name="nlg_agency_rating_environment">教学环境: %1$s</string>

    <!--mine-->
    <!--attention-->
    <string name="attention_title">关注年级</string>
    <string name="attention_empty_error">请选择您关注的年级</string>
    <string name="attention_diff_error">没有任何变化</string>

    <!--orders-->
    <string name="orders_title">我的订单</string>
    <string-array name="orders_indicators">
        <item>全部</item>
        <item>未付款</item>
        <item>已付款</item>
        <item>退款单</item>
    </string-array>
    <string-array name="orders_status_array">
        <item>未知</item>
        <item>未付款</item>
        <item>已付款</item>
        <item>已关闭</item>
        <item>已完成</item>
        <item>退款中</item>
        <item>已退款</item>
        <item>退款拒绝</item>
        <item>已失效</item>
        <item>已付款</item>
    </string-array>
    <string name="orders_no">订单号: %1$s</string>
    <string name="orders_count">数量: %1$d</string>
    <string name="orders_count_2">课时: %1$d</string>
    <string name="orders_price">金额: ￥%1$s</string>
    <string name="orders_price_2">课程金额: ￥%1$s</string>
    <string name="orders_price_3">付款方式: 当面付款</string>
    <string name="orders_re_price">预付金: ￥%1$s</string>
    <string name="orders_cancel">取消订单</string>
    <string name="orders_refund">申请退款</string>
    <string name="orders_pay">去付款</string>
    <string name="orders_empty">空空如也~</string>

    <!--keep-->
    <string name="keep_title">我的收藏</string>

    <!--accounts-->
    <string name="accounts_title">账号管理</string>
    <string name="accounts_empty">万里无云~</string>
    <string name="accounts_hint">订购会员服务</string>
    <string name="accounts_hint_2">有效期至: %1$s</string>
    <string name="accounts_hint_3">如需修改主账号, 请联系客服</string>
    <string name="accounts_purchase">订购</string>
    <string name="accounts_purchase_2">续约</string>
    <string name="accounts_purchase_3">拨号</string>
    <string name="accounts_main">主账号</string>
    <string name="accounts_common">其他账号</string>
    <string name="accounts_me">-(我)</string>
    <string name="accounts_remove">移除账号 %1$s ?</string>
    <string name="accounts_removing">移除账号 %1$s &#8230;</string>
    <string name="accounts_remove_error">主账号无法移除</string>

    <string name="accounts_add">添加账号</string>
    <string name="accounts_edit">编辑账号</string>
    <string name="accounts_name">姓名</string>
    <string name="accounts_appellation">称谓</string>
    <string name="accounts_phone">电话</string>
    <string name="accounts_commons">常用</string>
    <string name="accounts_error_name">请填写家长姓名</string>
    <string name="accounts_error_appellation">请填写家长称谓</string>
    <string name="accounts_error_phone">电话号码不合法</string>
    <string name="accounts_error_diff">没有任何改动</string>
    <string name="accounts_saving">创建家长账号&#8230;</string>
    <string name="accounts_saving_2">更新账号信息&#8230;</string>
    <string name="accounts_appellation_1">爸爸</string>
    <string name="accounts_appellation_2">妈妈</string>
    <string name="accounts_appellation_3">爷爷</string>
    <string name="accounts_appellation_4">奶奶</string>
    <string name="accounts_appellation_5">外公</string>
    <string name="accounts_appellation_6">外婆</string>

    <!--user info-->
    <string name="user_title">个人资料</string>
    <string name="user_parent_title">家长信息</string>
    <string name="user_child_title">学生信息</string>
    <string name="user_portrait">头像</string>
    <string name="user_name">姓名</string>
    <string name="user_phone">电话</string>
    <string name="user_appellation">称谓</string>
    <string name="user_member">会员</string>
    <string name="user_points">积分</string>
    <string name="user_id">问学ID</string>
    <string name="user_school">学校</string>
    <string name="user_class">班级</string>
    <string name="user_establish">开通</string>
    <string name="user_arrival">%1$s 到期</string>

</resources>
