<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group>
        <item
            android:id="@+id/nav_attention"
            android:icon="@drawable/ic_loyalty_white_24dp"
            android:title="@string/nav_attention" />
        <item
            android:id="@+id/nav_collection"
            android:icon="@drawable/ic_star_border_white_24dp"
            android:title="@string/nav_collection" />
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_white_24dp"
            android:title="@string/nav_history" />
        <item
            android:id="@+id/nav_download"
            android:icon="@drawable/ic_file_download_white_24dp"
            android:title="@string/nav_download" />
        <item
            android:id="@+id/nav_account"
            android:icon="@drawable/ic_supervisor_account_white_24dp"
            android:title="@string/nav_account" />
        <item
            android:id="@+id/nav_order"
            android:icon="@drawable/ic_assignment_white_24dp"
            android:title="@string/nav_order" />
    </group>

    <item android:title="@string/nav_action">
        <menu>
            <item
                android:id="@+id/nav_action_setting"
                android:icon="@drawable/ic_settings_white_24dp"
                android:title="@string/nav_action_setting" />

            <item
                android:id="@+id/nav_action_about_us"
                android:icon="@drawable/ic_share_white_24dp"
                android:title="@string/nav_action_about_us" />

            <item
                android:id="@+id/nav_action_logout"
                android:icon="@drawable/ic_exit_to_app_white_24dp"
                android:title="@string/nav_action_logout" />
        </menu>
    </item>

</menu>
