<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <SwitchPreference
        android:defaultValue="true"
        android:key="setting_notice_accept"
        android:title="@string/pref_title_new_message_notifications" />

    <SwitchPreference
        android:defaultValue="true"
        android:key="setting_notice_detail"
        android:title="@string/pref_title_new_message_detail" />

    <RingtonePreference
        android:defaultValue="content://settings/system/notification_sound"
        android:dependency="setting_notice_accept"
        android:key="setting_notice_ringtone"
        android:ringtoneType="notification"
        android:title="@string/pref_title_ringtone" />

    <SwitchPreference
        android:defaultValue="false"
        android:dependency="setting_notice_accept"
        android:key="setting_notice_vibrate"
        android:title="@string/pref_title_vibrate" />

</PreferenceScreen>
