<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundBase"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingEnd="@dimen/tiny_margin"
    android:paddingLeft="@dimen/tiny_margin"
    android:paddingRight="@dimen/tiny_margin"
    android:paddingStart="@dimen/tiny_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckedTextView
                android:id="@+id/father"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:background="@drawable/selector_bg_round"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingEnd="0sp"
                android:paddingLeft="15sp"
                android:paddingRight="0sp"
                android:paddingStart="15sp"
                android:text="@string/accounts_appellation_1"
                android:textColor="@drawable/selector_color_dark" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckedTextView
                android:id="@+id/mother"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:background="@drawable/selector_bg_round"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingEnd="0sp"
                android:paddingLeft="15sp"
                android:paddingRight="0sp"
                android:paddingStart="15sp"
                android:text="@string/accounts_appellation_2"
                android:textColor="@drawable/selector_color_dark" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckedTextView
                android:id="@+id/g_father"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:background="@drawable/selector_bg_round"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingEnd="0sp"
                android:paddingLeft="15sp"
                android:paddingRight="0sp"
                android:paddingStart="15sp"
                android:text="@string/accounts_appellation_3"
                android:textColor="@drawable/selector_color_dark" />

        </FrameLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:baselineAligned="false"
        android:orientation="horizontal">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckedTextView
                android:id="@+id/g_mother"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:background="@drawable/selector_bg_round"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingEnd="0sp"
                android:paddingLeft="15sp"
                android:paddingRight="0sp"
                android:paddingStart="15sp"
                android:text="@string/accounts_appellation_4"
                android:textColor="@drawable/selector_color_dark" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckedTextView
                android:id="@+id/mg_father"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:background="@drawable/selector_bg_round"
                android:clickable="true"
                android:gravity="center_vertical"
                android:paddingEnd="0sp"
                android:paddingLeft="15sp"
                android:paddingRight="0sp"
                android:paddingStart="15sp"
                android:text="@string/accounts_appellation_5"
                android:textColor="@drawable/selector_color_dark" />
        </FrameLayout>

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <CheckedTextView
                android:id="@+id/mg_mother"
                android:layout_width="60sp"
                android:layout_height="60sp"
                android:layout_gravity="center"
                android:background="@drawable/selector_bg_round"
                android:clickable="true"
                android:gravity="center_vertical"
                android:padding="0dp"
                android:paddingEnd="0sp"
                android:paddingLeft="15sp"
                android:paddingRight="0sp"
                android:paddingStart="15sp"
                android:text="@string/accounts_appellation_6"
                android:textColor="@drawable/selector_color_dark" />
        </FrameLayout>

    </LinearLayout>

</LinearLayout>