<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="6dp"
    android:layout_marginEnd="4dp"
    android:layout_marginLeft="4dp"
    android:layout_marginRight="4dp"
    android:layout_marginStart="4dp"
    android:layout_marginTop="4dp"
    android:clickable="true"
    android:foreground="?android:selectableItemBackground"
    app:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/light_margin"
        android:paddingEnd="@dimen/light_margin"
        android:paddingLeft="@dimen/light_margin"
        android:paddingRight="@dimen/light_margin"
        android:paddingStart="@dimen/light_margin"
        android:paddingTop="@dimen/light_margin">

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:text="@string/app_name"
            android:textAppearance="?android:textAppearanceMedium" />

        <TextView
            android:id="@+id/appellation"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/light_margin"
            android:drawableLeft="@drawable/ic_person_primary_18dp"
            android:drawablePadding="@dimen/tiny_margin"
            android:drawableStart="@drawable/ic_person_primary_18dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/app_name" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/tiny_margin"
            android:drawableLeft="@drawable/ic_call_primary_18dp"
            android:drawablePadding="@dimen/tiny_margin"
            android:drawableStart="@drawable/ic_call_primary_18dp"
            android:ellipsize="end"
            android:gravity="center_vertical"
            android:maxLines="1"
            android:text="@string/app_name" />

        <LinearLayout
            android:id="@+id/bottom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:visibility="visible">

            <TextView
                android:id="@+id/hint"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:paddingTop="@dimen/light_margin"
                android:text="@string/accounts_hint" />

            <TextView
                android:id="@+id/purchase"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/light_margin"
                android:layout_marginStart="@dimen/light_margin"
                android:paddingEnd="@dimen/light_margin"
                android:paddingLeft="@dimen/light_margin"
                android:paddingRight="@dimen/light_margin"
                android:paddingStart="@dimen/light_margin"
                android:paddingTop="@dimen/light_margin"
                android:text="@string/accounts_purchase"
                android:textColor="@color/colorAccent" />

        </LinearLayout>

    </LinearLayout>

</android.support.v7.widget.CardView>